[package]
name = "fiputils"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
geo = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
shapefile = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
