[package]
name = "fiputils"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for looking up US county FIPS codes (name, FIPS, or lat/lon)."
repository = "https://github.com/dcbark01/fiputils"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
geo = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
shapefile = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
